# advent-of-code-2022

./: .gitignore  LICENSE  README.md  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d10.py  d13.py  d14.py  d16.py  d17.py  d18.py  d19.py  d20.py  d21.py  d24.py  pyproject.toml
src/: d01.py  d08.py  d09.py  d11.py  d12.py  d15.py  d17.py  d19.py  d22-th.txt  d22.py  d23.py  d25.py
