[tool.poetry]
name = "advent-of-code-2022"
version = "1.0.0"
description = "Advent of Code 2022 in Python"
authors = ["Kent Hou Man"]
license = "MIT"
readme = "README.md"
packages = [{include = "advent_of_code_2022"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.10.0"}
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
